feat: add access control and web login
